# clomp

./: CMakeLists.txt  LICENSE.TXT  README.md
docs/: clomp.tex
include/: clang_config.h  config.h.in  handler.h  matcher.h  sema.h
include/driver/: compiler.h  program.h
include/omp/: annotation.h  pragma.h
include/utils/: source_locations.h  string_utils.h
script/: llvm-3.0-installer.sh  llvm-3.2-installer.sh
src/: handler.cpp  main.cxx  matcher.cpp  sema.cpp
src/driver/: compiler.cpp  program.cpp
src/omp/: annotation.cpp  pragma.cpp
src/utils/: source_locations.cpp
test/: pragma_matcher_test.cc
test/inputs/: omp_arrayadd.c  omp_barrier.c  omp_capture.c  omp_for.c  omp_parallel.c  simple_omp.c
